# yosys

./: .gitignore  .gitlab-ci.yml  Brewfile  CMakeLists.txt  Dockerfile  FindYosys.cmake  Makefile  README.md  docker-compose.yml
backends/smt2/: CMakeLists.txt
cmake/: CompilerFlagsCheck.cmake  FindEdit.cmake  copy_files.cmake
examples/basys3/: run_yosys.ys
examples/basys3_fsm/: create_bitstream.bat  example.bit  example.edif  example.v  example.xdc  program_bitstream.bat  run.sh  usage_statistics_webtalk.html  usage_statistics_webtalk.xml  vivado.jou  vivado_2872.backup.jou  vivado_4000.backup.jou  vivado_8636.backup.jou  vivado_9040.backup.jou  vivado_9984.backup.jou
frontends/: CMakeLists.txt
frontends/verific/: CMakeLists.txt
misc/: FindYosys.cmake  cmake_uninstall.cmake.in  yosys-cmake.py.in  yosys.pc.in
passes/cmds/: CMakeLists.txt
passes/fsm/: CMakeLists.txt  fsm.cc  fsm_expand.cc  fsm_extract.cc  fsm_obfuscate.cc  fsmdata.h  old_fsm_obfu
passes/hierarchy/: CMakeLists.txt
passes/opt/: CMakeLists.txt
passes/sat/: CMakeLists.txt
passes/techmap/: CMakeLists.txt
techlibs/: CMakeLists.txt
techlibs/achronix/: CMakeLists.txt
techlibs/altera_intel/: CMakeLists.txt
techlibs/common/: CMakeLists.txt
techlibs/coolrunner2/: CMakeLists.txt
techlibs/easic/: CMakeLists.txt
techlibs/gowin/: CMakeLists.txt
techlibs/greenpak4/: CMakeLists.txt
techlibs/ice40/: CMakeLists.txt
techlibs/intel/: CMakeLists.txt
techlibs/xilinx/: CMakeLists.txt
tests/bram/: .gitignore  run-single.sh.in
tests/fsm/: run-test.sh.in
tests/memories/: .gitignore  run-test.sh.in
tests/realmath/: .gitignore
tests/sat/: run-test.sh.in
tests/share/: run-test.sh.in
tests/simple/: .gitignore  fsm.v  run-test.sh
tests/smv/: .gitignore  run-single.sh.in  run-test.sh.in
tests/sva/: .gitignore  runtest.sh.in
tests/techmap/: .gitignore  mem_simple_4x1_runtest.sh.in
tests/tools/: .gitignore  autotest.mk  autotest.sh.in
tests/unit/: CMakeLists.txt
tests/various/: .gitignore
tests/vloghtb/: .gitignore  common.sh.in  run-test.sh.in
